# Broadlink-UFO-R11

./: .dockerignore  .editorconfig  .gitignore  DEPLOY.md  Dockerfile.backend  README.md  README.ru.md  btu.py  docker-compose.yml  pyproject.toml  render.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: deploy.yml  test.yml
app/: __init__.py  main.py
app/api/: __init__.py  routes.py
app/core/: __init__.py  config.py
app/models/: __init__.py  schemas.py
app/services/: __init__.py  broadlink.py  constants.py  converter.py  encoder.py  exceptions.py  tuya.py
frontend/: .dockerignore  .gitignore  Dockerfile  eslint.config.mjs  global.d.ts  next.config.ts  package-lock.json  package.json  vercel.json
frontend/src/__tests__/converter/: decoder-errors.test.ts  encoder-errors.test.ts  golden.test.ts  smartir.test.ts
frontend/src/__tests__/fixtures/: golden-data.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ConversionOptions.tsx  ConvertForm.tsx  FileUpload.tsx  Header.tsx  JsonEditor.tsx  LanguageSwitcher.tsx  Tabs.tsx  TwoPanelEditor.tsx  WaveformTrace.tsx
frontend/src/i18n/: LanguageContext.tsx  index.ts
frontend/src/i18n/translations/: en.ts  index.ts  ru.ts
frontend/src/lib/: api.ts  download.ts  version.ts
frontend/src/lib/converter/: base64.ts  broadlink-decoder.ts  constants.ts  errors.ts  index.ts  smartir.ts  tuya-compressor.ts  tuya-encoder.ts
frontend/src/types/: index.ts
tests/: __init__.py  test_api.py  test_btu.py  test_services.py
