[project]
name = "broadlinktoUFOR11"
version = "1.0.0"
description = "Broadlink to UFO-R11 IR code converter for SmartIR in Home Assistant"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "dzerik"}
]
keywords = [
    "broadlink",
    "ir-codes",
    "home-assistant",
    "smartir",
    "ufo-r11",
    "mqtt",
    "tuya"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Assistant Automation",
    "Topic :: Utilities",
]

# CLI mode has no runtime dependencies - uses only standard library
dependencies = []

[project.optional-dependencies]
# FastAPI web application dependencies
web = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "httpx>=0.27.0",  # For testing FastAPI
]
all = [
    "broadlinktoUFOR11[web,dev]",
]

[project.scripts]
btu = "btu:main"

[project.urls]
"Homepage" = "https://github.com/yourusername/broadlinktoUFOR11"
"Bug Tracker" = "https://github.com/yourusername/broadlinktoUFOR11/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["btu"]
packages = ["app", "app.api", "app.core", "app.models", "app.services"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["btu", "app"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
fail_under = 80

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["btu", "app"]